--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         </div>
       </div>
       <div class="container">
-        <h2 animasi-tulisan="WELCOME TO MY WEBSITE"></h2>
+        <h2 animasi-tulisan="WELCOME TO MY PORTOFOLIO"></h2>
         <div class="mouse">
           <div class="mouse-shape">
             <div class="mouse-animation"></div>
