--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
                 <div class="box">
                   <ul>
                     <li>
-                      NAME : <span animasi-tulisan="BAGUS INDRAYANA">..........</span>
+                      NAME : <span animasi-tulisan="NURABIDIN RAGIL WIBOWO">..........</span>
                     </li>
                     <li>
-                      BORN : <span animasi-tulisan="GROBOGAN, 15 MAY 2001">.........</span>
+                      BORN : <span animasi-tulisan="BOYOLALI, 16 SEPTEMBER 2004">.........</span>
                     </li>
                     <li>
-                      ADDRESS : <span animasi-tulisan="SAMARINDA, EAST KALIMANTAN">.........</span>
+                      ADDRESS : <span animasi-tulisan="NEW GREEN AMBARAWA RESIDENCE">.........</span>
                     </li>
 
                   </ul>
@@ -218,7 +218,7 @@
                     <div class="stripes-bg">
 
                     </div>
-                    <span class="status" animasi-tulisan="STUDENT"></span>
+                    <span class="status" animasi-tulisan="SOCIAL MEDIA CREATOR"></span>
                   </div>
                 </div>
               </div>
@@ -247,7 +247,7 @@
                           <div class="folder__front right"></div>
                         </div>
                       </div>
-                      <span>WEB</span>
+                      <span>FOTOGRAFER</span>
                     </div>
 
                   </li>
@@ -262,7 +262,7 @@
                           <div class="folder__front right"></div>
                         </div>
                       </div>
-                      <span>MOBILE</span>
+                      <span>VIDEOGRAFER</span>
                     </div>
                   </li>
                   <li data-target="#project-game">
@@ -276,7 +276,7 @@
                           <div class="folder__front right"></div>
                         </div>
                       </div>
-                      <span>GAME</span>
+                      <span>DESAIN</span>
                     </div>
                   </li>
                   <li data-target="#project-library">
@@ -290,7 +290,7 @@
                           <div class="folder__front right"></div>
                         </div>
                       </div>
-                      <span>LIBRARY</span>
+                      <span>EDITING</span>
                     </div>
                   </li>
                 </ul>
@@ -364,15 +364,16 @@
             <div class="row skill">
               <div class="col-6">
                 <ul>
-                  <li animasi-tulisan="HTML"></li>
-                  <li animasi-tulisan="CSS"></li>
-                  <li animasi-tulisan="JS"></li>
+                  <li animasi-tulisan="FOTOGRAFER"></li>
+                  <li animasi-tulisan="VIDEOGRAFER"></li>
+                  <li animasi-tulisan="OPERATOR STREAMING"></li>
                 </ul>
               </div>
               <div class="col-6">
                 <ul>
-                  <li animasi-tulisan="PHP"></li>
-                  <li animasi-tulisan="LARAVEL"></li>
+                  <li animasi-tulisan="DESAIN GRAFIS"></li>
+                  <li animasi-tulisan="VIDEO EDITOR"></li>
+                  <li animasi-tulisan="PILOT DRONE"></li>
                 </ul>
               </div>
             </div>
